--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -36,6 +36,10 @@ body {
     /*background-image: linear-gradient(to right, #212020, #070f27);*/
 }
 
+body a {
+    color: var(--fontLight)!important;
+}
+
 ::-webkit-scrollbar {
 
 }
@@ -115,7 +119,7 @@ footer h2 {
 }
 
 .footerTechLogos {
-    background-color: var(--fontLight);
+    background-color: var(--ligghtGray);
     padding: 1rem;
     border-radius: 5px;
 }
@@ -146,7 +150,37 @@ footer h2 {
 }
 
 .homeHeading1 div {
-    width: 410px;
+    width: 380px;
+    margin: 2rem;
+    margin-right: 6.2rem;
+    text-align: justify-all;
+}
+
+/*PRIVACY*/
+
+.privacyPolicyBackground {
+    width: 100%;
+    height: 100vh;
+    background-image: url(/Images/Background/information-technology.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    z-index: -1;
+    filter: opacity(.3);
+}
+
+.privacyHeading1 {
+    background-image: linear-gradient(to left, #220d27, #005ec333);
+    width: 100%;
+    position: absolute;
+    top: 50px;
+    right: 0;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.privacyHeading1 div {
+    width: 380px;
     margin: 2rem;
     margin-right: 6.2rem;
     text-align: justify-all;
@@ -303,6 +337,7 @@ footer h2 {
     min-height: 120px;
     border-radius: 5px;
     padding: .5rem;
+    word-wrap: break-word;
 }
 
 .cardFooterButtonsHover:hover {
@@ -397,6 +432,11 @@ footer h2 {
     margin: 2rem;
 }
 
+.userTaskLeftMenuContent a {
+    text-decoration: none;
+    color: var(--fontLight);
+}
+
 .userTasksLeftMenu {
     min-width: 300px;
     border-right: 1px dashed #cccccc38;
@@ -417,10 +457,6 @@ footer h2 {
     transform: translateX(5px);
 }
 
-#menuLeftSubMenu1Btn {
-
-}
-
 .menuLeftSubMenu1 {
     height: 0;
     overflow: hidden;
@@ -432,6 +468,7 @@ footer h2 {
 
 .userTasksMain {
     margin: auto;
+    min-height: 100vh;
 }
 
 @media screen and (max-width: 1055px){
