--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -29,6 +29,8 @@
 </head>
 <body>
 
+    <div class="mainBackground"></div>
+
     <div class="customNavMobileMenuBtn">
         <div></div>
         <div></div>
