--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,9 +2,12 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="homeBackground">
-
+<div class="homeBackgroundBox">
+    <div class="homeBackground"></div>
+    <div class="homeBackground2"></div>
+    <div class="homeBackground3"></div>
 </div>
+
 
 <div class="homeHeading1">
     <div>
