--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -31,17 +31,25 @@ dl, ol, ul {
 
 body {
     font-family: 'Poppins', sans-serif;
-    background-color: var(--menuDarker);
+    /*background-color: var(--menuDarker);*/
     color: var(--fontLight);
-    /*background-image: linear-gradient(to right, #212020, #070f27);*/
+/*    background-image: radial-gradient(#6f6a55ff, #050101);*/
 }
 
 body a {
     color: var(--fontLight)!important;
 }
 
-::-webkit-scrollbar {
+.mainBackground {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: -500;
+    background-image: radial-gradient(#313131, #161010);
+}
 
+::-webkit-scrollbar {
 }
 /* NAVIGATION */
 header {
@@ -56,8 +64,13 @@ header {
     align-items: center;
     justify-content: space-between;
     height: 50px;
-    background-color: var(--backgroundDark);
-    border-bottom: 1px solid #d7d7d759
+    /*background-color: var(--backgroundDark);*/
+    border-bottom: 1px solid #d7d7d759;
+
+    background: rgba(255, 255, 255, 0.09);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(9.7px);
+    -webkit-backdrop-filter: blur(9.7px);
 }
 
 .customNavLogoLink {
@@ -129,6 +142,14 @@ footer h2 {
 }
 
 /*HOME*/
+
+.homeBackgroundBox {
+    width: 100%;
+    height: 100vh;
+    position: relative;
+    overflow: hidden;
+}
+
 .homeBackground {
     width: 100%;
     height: 100vh;
@@ -138,6 +159,53 @@ footer h2 {
     background-repeat: no-repeat;
     z-index: -1;
 }
+
+.homeBackground2 {
+    width: 100%;
+    height: 100vh;
+    background-image: url(/Images/Background/stars_background_cut2.png);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    z-index: 1;
+    position: absolute;
+    top: 0;
+    animation: moveStarBackground 60s ease-in-out infinite alternate;
+}
+
+@keyframes moveStarBackground {
+    0% {
+        transform: translateX(0);
+    }
+
+    100% {
+        transform: translate(50%);
+    }
+}
+
+.homeBackground3 {
+    width: 100%;
+    height: 100vh;
+    background-image: url(/Images/Background/stars_background_cut2.png);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    z-index: 1;
+    position: absolute;
+    top: 0;
+    animation: moveStarBackground3 60s ease-in-out infinite alternate;
+}
+
+@keyframes moveStarBackground3 {
+    0% {
+        transform: translateX(0);
+    }
+
+    100% {
+        transform: translateX(-600px);
+    }
+}
+
 
 .homeHeading1 {
     background-image: linear-gradient(to left, #220d27, #005ec333);
@@ -453,6 +521,12 @@ footer h2 {
     list-style: none;
 }
 
+/*.userTasksLeftMenu li:first-child a  {
+    text-decoration: dashed;
+    text-decoration-line: underline;
+    text-decoration-thickness: 3px;
+}*/
+
 .userTasksLeftMenu li:hover {
     transform: translateX(5px);
 }
@@ -509,7 +583,7 @@ footer h2 {
 
     .customNavMobileMenuBtn {
         position: fixed;
-        top: 1rem;
+        top: .6rem;
         right: 1.5rem;
         cursor: pointer;
         z-index: 2;
@@ -565,9 +639,13 @@ footer h2 {
 
     /* CARD */
 
+    .userTasksMain {
+        width: 66%;
+    }
+
     .customCard {
-        width: unset;
-        margin: 2rem;
+        width: 100%;
+        margin: 0rem;
         margin-bottom: 2rem;
     }
 
@@ -605,6 +683,10 @@ footer h2 {
         width: 100%;
         z-index: 1;
         margin-left: 1.5rem;
+    }
+
+    .userTasksMain {
+        width: 90%;
     }
 
 }
