--- a/Views/Todos/_Task.cshtml
+++ b/Views/Todos/_Task.cshtml
@@ -45,9 +45,18 @@
 
             <div class="cardFooter">
 
+                <ul class="cardFooterLeftBtns">
+                    <li class="cardFooterLeftBtnsAiHelp" title="Get Ai Help" cardId="@task.Id">
+                        <span class="material-symbols-outlined">
+                            cognition
+                        </span>
+                        <p>Ai</p>
+                    </li>
+                </ul>
+
                 <ul class="cardFooterBtns">
 
-                    <li class="" role="button">
+                    <li>
                         <span title="Edit" class="material-symbols-outlined cardFooterButtonsHover">
                             edit
                         </span>
@@ -99,3 +108,17 @@
     }
 }
 
+@section Scripts{
+
+    <script>
+
+        $(document).ready(function () {
+
+
+
+
+        
+        });
+
+    </script>
+}
